--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,1 +1,21 @@
 
+spring:
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    password: root
+    username: Krishna@9097
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:2222/eureka, http://localhost:2223/eureka, http://localhost:2224/eureka
+
+#Logging configuration
+logging:
+  file: Errorlog_prod.log
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss,SSS} %5p [%t] %c [%M] - %m%n"
